2001-10-06 Malcolm Tredinnick <malcolm@commsecure.com.au>

	* gnome-program.c, gnome-triggers.c, gnome-triggers.h:
	* gnome-util.c: Documentation updates.

2001-10-05 Malcolm Tredinnick <malcolm@commsecure.com.au>

	* gnome-config.c, gnome-gconf.c, gnome-help.c, gnome-program.c:
	* gnome-score.c, gnome-sound.c, gnome-url.c: Documentation
	updates.

2001-10-04 Malcolm Tredinnick <malcolm@commsecure.com.au>

	* gnome-program.c, gnome-exec.c, gnome-18n.c: Documentation
	updates.

Sun Sep 30 14:41:52 2001  George Lebl <jirka@5z.com>

	* gnome-program.c: free data on finalize, copy argv stuff, and a bit
	  of cleanup

2001-09-28 Mark McLoughlin  <mark@skynet.ie>

	* libgnome/gnome-program.h: add lame GNOME_PARAM_NONE
	for clarity.

	* libgnome/gnome-init.c
	(gnome_bonobo_module_info_get): add missing initialiser.

2001-09-19  Frank Belew <frb@ximian.com>

	* gnome-init.c (gnomelib_options): add space to implicitly concatenated 	string

2001-09-19  Frank Belew <frb@ximian.com>

	* gnome-init.c (gnomelib_options): add quotation marks to continued 
	string in initializer

	* gnome-program.h: define program_invocation_short_name and
	program_invocation_name if not already defined in errno.h

2001-09-18  Havoc Pennington  <hp@redhat.com>

	* libgnome-2.0.pc.in (Requires): add gnome-vfs

2001-09-19  Ariel Rios  <ariel@gnu.org>

	* gnome-program.c (add_to_module_list): Cast the return
	value of g_ptr_array_index since PPC was complaining about this. 

Tue Sep 18 20:40:04 2001  George Lebl <jirka@5z.com>

	* gnome-util.[ch], gnome-config.h, gnome-init.c:
	  deprecate g_concat_dir_and_file, and replace it with a macro
	  using g_build_filename, which essentially does the same thing.

Tue Sep 18 17:43:45 2001  George Lebl <jirka@5z.com>

	* Makefile.am, gnome-config.[ch], gnome-gconfP.h, gnome-gconf.[ch],
	  gnome-exec.c, gnome-init.c, gnome-url.c:  Do the private symbols
	  dance and make the gconf lazy init stuff private

Fri Sep 14 12:33:21 2001  George Lebl <jirka@5z.com>
