@@ -282,12 +282,14 @@ gnome_marshal_VOID__UINT_UINT_UINT_UINT
 <SECTION>
 <FILE>libgnometypebuiltins</FILE>
 GNOME_TYPE_TRIGGER_TYPE
-gnome_trigger_type_get_type
 GNOME_TYPE_FILE_DOMAIN
-gnome_file_domain_get_type
 GNOME_TYPE_HELP_ERROR
-gnome_help_error_get_type
 GNOME_TYPE_URL_ERROR
+
+<SUBSECTION Standard>
+gnome_trigger_type_get_type
+gnome_file_domain_get_type
+gnome_help_error_get_type
 gnome_url_error_get_type
 </SECTION>
 
