@@ -20,12 +20,10 @@ handle the job.
 
 <!-- ##### ENUM GnomeURLError ##### -->
 <para>
-The errors that can be returned due to bad parameters being passed to
-gnome_url_show().
+
 </para>
 
-@GNOME_URL_ERROR_PARSE: It was not possible to parse the url and use it as an
-argument to a viewer.
+@GNOME_URL_ERROR_PARSE: 
 
 <!-- ##### MACRO GNOME_URL_ERROR ##### -->
 <para>
