@@ -2,11 +2,13 @@
 libgnometypebuiltins
 
 <!-- ##### SECTION Short_Description ##### -->
-
+Some type macros defined by libgnome.
 
 <!-- ##### SECTION Long_Description ##### -->
 <para>
-
+Most applications will not need to use the macros in this section. They are the
+types of the various enumerations created elsewhere in libgnome and registered
+with the GObject type system.
 </para>
 
 <!-- ##### SECTION See_Also ##### -->
@@ -16,61 +18,29 @@ libgnometypebuiltins
 
 <!-- ##### MACRO GNOME_TYPE_TRIGGER_TYPE ##### -->
 <para>
-
+The type of the #GnomeTriggerType enum.
 </para>
 
-
-
-<!-- ##### FUNCTION gnome_trigger_type_get_type ##### -->
-<para>
-
-</para>
-
-@Returns: 
 
 
 <!-- ##### MACRO GNOME_TYPE_FILE_DOMAIN ##### -->
 <para>
-
+The type of the #GnomeFileDomain enum.
 </para>
 
-
-
-<!-- ##### FUNCTION gnome_file_domain_get_type ##### -->
-<para>
-
-</para>
-
-@Returns: 
 
 
 <!-- ##### MACRO GNOME_TYPE_HELP_ERROR ##### -->
 <para>
-
+The type of the #GnomeHelpError enum.
 </para>
 
-
-
-<!-- ##### FUNCTION gnome_help_error_get_type ##### -->
-<para>
-
-</para>
-
-@Returns: 
 
 
 <!-- ##### MACRO GNOME_TYPE_URL_ERROR ##### -->
 <para>
-
+The type of the #GnomeURLError enum.
 </para>
 
-
-
-<!-- ##### FUNCTION gnome_url_error_get_type ##### -->
-<para>
-
-</para>
-
-@Returns: 
 
 
