@@ -1,7 +1,8 @@
 2001-10-06 Malcolm Tredinnick <malcolm@commsecure.com.au>
 
 	* gnome-program.c, gnome-triggers.c, gnome-triggers.h:
-	* gnome-util.c: Documentation updates.
+	* gnome-util.c, gnome-help.h, gnome-uri.h: Documentation updates
+	and fiddling.
 
 2001-10-05 Malcolm Tredinnick <malcolm@commsecure.com.au>
 
